<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="14dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:flow_horizontalAlign="center" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:text="@string/number_label"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/etNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="98dp"
        android:text="@string/centena"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

    <TextView
        android:id="@+id/tvNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/dezena"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/tvNumber2"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber2" />

    <TextView
        android:id="@+id/tvNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/unidade"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/tvNumber3"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber3" />

    <TextView
        android:id="@+id/tvResultC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/tvResultD"
        app:layout_constraintStart_toStartOf="@+id/tvResultD"
        app:layout_constraintTop_toTopOf="@+id/tvNumber2" />

    <TextView
        android:id="@+id/tvResultD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/tvResultU"
        app:layout_constraintStart_toStartOf="@+id/tvResultU"
        app:layout_constraintTop_toBottomOf="@+id/tvResultC" />

    <TextView
        android:id="@+id/tvResultU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvResultU2"
        app:layout_constraintEnd_toStartOf="@+id/tvResultU2"
        app:layout_constraintStart_toStartOf="@+id/tvResultU2" />

    <TextView
        android:id="@+id/tvResultU2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="18dp"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/tvNumber4"
        app:layout_constraintTop_toBottomOf="@+id/tvResultD" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultU" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="108dp"
        android:text="@string/button_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber4" />

</androidx.constraintlayout.widget.ConstraintLayout>
